refactor: Match 관련 DTO를 이너 클래스로 라팩토링